--- a/man.html
+++ b/man.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="man.css">
 </head>
 <body>
-<div class="txt1">퍼블사나이</div>
-<div class="txt2">퍼블사나이</div>
+<div class="txt1">가짜사나이</div>
+<div class="txt2">가짜사나이</div>
 <div class="box">
   <div class="grass"></div>
   <div class="land"></div>
